PN-457: My Matches page is not showing matching genes if one side has vcf file uploaded Fixed.

--- a/matching-notification-resources/src/main/resources/resources/uicomponents/matchingNotification/matchesTable.css
+++ b/matching-notification-resources/src/main/resources/resources/uicomponents/matchingNotification/matchesTable.css
@@ -492,3 +492,8 @@ td[name="contact"] {
   white-space: normal;
   text-align: justify;
 }
+.exome-gene {
+  color: #369;
+  font-size: .8em;
+  font-style: italic;
+}
